--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 ckanext/cioos_theme/public/grunt/yarn.lock
+
+# Ignore PyCharm/PhpStorm env
+.idea
