remove grunt as it is massive and we only use the scss compile part. Replace with node sass module and a compile_sass.sh script which will watch all scss files and compile to css. command can be run manually if you don't want to wait for the polling.
to run start the sass process in a new terminal and leave running
```
cd~/ckan/contrib/docker/src/ckanext-cioos_theme/ckanext/cioos_theme/public
./compile_sass.sh
```

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 ckanext/cioos_theme/public/grunt/yarn.lock
+
+ckanext/cioos_theme/public/.sass-cache/
+
+ckanext/cioos_theme/public/sass/.sass-cache/
