--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ ckanext/cioos_theme/public/grunt/yarn.lock
 ckanext/cioos_theme/public/.sass-cache/
 
 ckanext/cioos_theme/public/sass/.sass-cache/
+
+ckanext/cioos_theme/public/base/.DS_Store
