cioosatlantic-master branch pull request back to master (#41)
* Added CIOOS Atlantic header file menu dropdowns, and French/English logos.

* Added French/English logo to pre-header.

* Remove Resouces caret. Updated Partners menu item.

* Started French translations of Main Menu items in CKAN, needs to point to /fr/ in WordPress.

* Updated French URLs to match WordPress, currently under construction. TODO: Fix once translated.

* Removed caret for resources menu item.

* Fixed slash issue. Updated CKAN links to not include /fr/. Fixed menu item.

* Update to CKAN theme for Atlantic

* Organization logos should be local from CKAN instance, and not saved/requested off the server.

* Updated Atlantic header with French URLs.

* Updating CIOOS Atlantic specific theme colours after merge.

* Fixing overwritten font-family to be same as WordPress menu link.

* Re-added cioosatlantic-master changes back to branch after merge. Need to rebuild cioos_theme.css.map to be aligned with atlantic css.

* Update site social variable instead of hard coded.

* Readded endif

* Added in macro so social exists.

* Updated sass and ran compile for cioos_theme.scss

* Compiled sass cioos_theme.scss with cioosatlantc.scss import removed.

* Created copy of pacific_footer.html template as new starting point for atlantic_footer.html

* Added footer sections/mostly working with admin css, not exact, but close.

* Updated Atlantic footer catalogue hyperlink.

* Fixed first column in footer with proper email and linkedin.

* Removed CIOOS Atlantic from header.html to prepare to get back into master.

* Added Coastal Action logo blue circle.

* Added FORCE logo to repo.

* Moved logos into Atlantic logo subfolder, added 3 logos.

* Added NEGL Queen's University Logo

* Raw Atlantic CKAN admin css box stlying with Odum's fixes.

* update scss to to match Atlantic dev site. create parameters to set  colour's and image icons to promote easy

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ coverage.xml
 docs/_build/
 ckanext/cioos_theme/public/grunt/yarn.lock
 
+
+# Ignore PyCharm/PhpStorm env
+.idea
+
 ckanext/cioos_theme/public/.sass-cache/
 
 ckanext/cioos_theme/public/sass/.sass-cache/
