make adjustments to the look and feel of the dataset read page. - truncate description and add a "read more" link - load page with date, metadata source, and additional info sections collapsed and move them to end of page. - move format links to side bar - adjust how resources are displayed and make whole resource row clickable

--- a/ckanext/cioos_theme/public/resource.config
+++ b/ckanext/cioos_theme/public/resource.config
@@ -10,3 +10,7 @@ bootstrap_datetimepicker =
     js/modules/date-query.js
 
     js/datetimepicker/bootstrap-datetimepicker.css
+
+
+truncate =
+    js/modules/truncate.js
